name:                stutter
version:             0.1.0.0
synopsis:            (Stutter Text+String)-Utterer
description:         Please see README.md
homepage:            https://github.com/nmattia/stutter#readme
license:             MIT
license-file:        LICENSE
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           (c) 2017 Nicolas Mattia
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src/
  ghc-options:         -Wall
  exposed-modules:
                      Stutter.Parser
                      Stutter.Producer
  build-depends:
                       base
                     , bytestring
                     , attoparsec
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , resourcet
                     , text
  default-language:    Haskell2010

executable stutter
  main-is:             Stutter.hs
  hs-source-dirs:      exe/
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                       base
                     , attoparsec
                     , conduit
                     , conduit-combinators
                     , stutter
                     , text
  default-language:    Haskell2010

test-suite stutter-test
  main-is:             Main.hs
  hs-source-dirs:      test/
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  type:                exitcode-stdio-1.0
  build-depends:
                       base
                     , attoparsec
                     , stutter
                     , tasty
                     , tasty-ant-xml
                     , tasty-hunit
  default-language:    Haskell2010
