name:                stutter
version:             0.1.0.2
synopsis:            (Stutter Text|String)-Utterer
description:         CLI regex-like string generator
homepage:            https://github.com/nmattia/stutter#readme
license:             MIT
license-file:        LICENSE
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           (c) 2018 Nicolas Mattia
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src/
  ghc-options:         -Wall
  exposed-modules:
                      Stutter.Parser
                      Stutter.Producer
  build-depends:
                       base < 5
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , exceptions
                     , mtl
                     , resourcet
                     , text
  default-language:    Haskell2010

executable stutter
  main-is:             Stutter.hs
  hs-source-dirs:      exe/
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1 -Wall
  build-depends:
                       base < 5
                     , attoparsec
                     , conduit
                     , conduit-combinators
                     , optparse-applicative
                     , stutter
                     , text
  default-language:    Haskell2010

test-suite stutter-test
  main-is:             Main.hs
  hs-source-dirs:      test/
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  type:                exitcode-stdio-1.0
  build-depends:
                       base
                     , attoparsec
                     , snipcheck >= 0.1.0.2
                     , stutter
                     , tasty
                     , tasty-ant-xml
                     , tasty-hunit
  default-language:    Haskell2010
